--- a/playbook.yaml
+++ b/playbook.yaml
@@ -41,14 +41,23 @@
     - name: Arch
       when: ansible_os_family == 'Archlinux'
       block:
-        - name: pacman -Syu
+        - name: 'pacman -Syu'
           community.general.pacman:
             update_cache: yes
             upgrade: yes
-            extra_args: --noconfirm
+            extra_args: --noconfirm --ignoregroup=ansible
           tags: [always, syu]
+          async: 5
+          poll: 0
+          register: pacman_syu_sleeper
+
+        - name: 'Check - pacman -Syu'
+          tags: [always, syu]
+          async_status:
+            jid: "{{ pacman_syu_sleeper.ansible_job_id }}"
+          register: job_result
+          until: job_result.finished
           retries: 3
-          delay: 30
 
         - name: Include task list in play
           import_tasks: ansible/tasks/tools/main.yaml
