--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,3 +7,6 @@ fact_caching = jsonfile
 fact_caching_connection = /tmp
 fact_caching_timeout = 7200
 library = ./ansible/library
+
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
