--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -8,12 +8,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ~/Library/Caches/pip
-          key: ${{ runner.os }}-pip-
-          restore-keys: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/**') }}
+      # - name: Cache pip
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ~/Library/Caches/pip
+      #     key: ${{ runner.os }}-pip-
+      #     restore-keys: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/**') }}
 
       # - run: pip3 install ansible ansible-core molecule molecule-vagrant ansible-lint lineinfile
 
