--- a/ansible/roles/ansible-role-security-hardening/tasks/main.yml
+++ b/ansible/roles/ansible-role-security-hardening/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 # Variable configuration.
 - name: Include OS-specific variables (Arch).
-  include_vars: "{{ ansible_distribution|lower }}.yaml"
+  include_vars: "{{ ansible_distribution|lower }}.yml"
   when: ansible_distribution == 'Archlinux'
 
 - name: Include OS-specific variables (Debian).
-  include_vars: "{{ ansible_distribution|lower }}-{{ ansible_distribution_version.split('.')[0] }}.yaml"
+  include_vars: "{{ ansible_distribution|lower }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
   when: ansible_os_family == 'Debian'
 
 # Other
@@ -14,13 +14,13 @@
     name: "{{ timezone }}"
 
 # SSH
-- include_tasks: ssh.yaml
+- include_tasks: ssh.yml
   when: security_ssh_enabled | bool
 
 # Fail2Ban
-- include_tasks: fail2ban.yaml
+- include_tasks: fail2ban.yml
   when: security_fail2ban_enabled | bool
 
 # UFW
-- include_tasks: ufw.yaml
+- include_tasks: ufw.yml
   when: security_ufw_enabled | bool
