--- a/ansible/roles/ansible-role-sssd/tasks/variables.yml
+++ b/ansible/roles/ansible-role-sssd/tasks/variables.yml
@@ -1,9 +1,9 @@
 ---
 # Variable configuration.
 - name: Include OS-specific variables (Arch).
-  include_vars: "{{ ansible_distribution|lower }}.yaml"
+  include_vars: "{{ ansible_distribution|lower }}.yml"
   when: ansible_distribution == 'Archlinux'
 
 - name: Include OS-specific variables (Debian).
-  include_vars: "{{ ansible_distribution|lower }}-{{ ansible_distribution_version.split('.')[0] }}.yaml"
+  include_vars: "{{ ansible_distribution|lower }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
   when: ansible_os_family == 'Debian'
