--- a/ansible/roles/ansible-osquery/meta/main.yml
+++ b/ansible/roles/ansible-osquery/meta/main.yml
@@ -1,7 +1,8 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  role-name: ansible-osquery
+  author: Pratik Balar <pratik@improwised.com>
+  description: Setup osqueyd in debina and arch with fleet
+  company: Improwised
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +15,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: Apache-2.0
 
   min_ansible_version: 2.1
 
@@ -27,19 +28,22 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
+  platforms:
+  - name: Debian
+    versions:
+    - 20.04
+  - name: Archlinux
   #   versions:
   #   - all
   #   - 1.0
   #   - 7
   #   - 99.99
 
-  galaxy_tags: []
+  galaxy_tags:
+    - osqueryd
+    - osquery
+    - fleet
+
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
