--- a/ansible/roles/ansible-role-security-hardening/tasks/ssh.yml
+++ b/ansible/roles/ansible-role-security-hardening/tasks/ssh.yml
@@ -12,9 +12,9 @@
       line: "PasswordAuthentication {{ yes if security_ssh_password_authentication|bool == 'True' else 'no' }}"
     - regexp: "^PermitRootLogin"
       line: "PermitRootLogin {{ yes if security_ssh_permit_root_login|bool == 'True' else 'no' }}"
-    - regexp: "^Port"
+    - regexp: "^(Port|#Port)"
       line: "Port {{ security_ssh_port }}"
-    - regexp: "^UseDNS"
+    - regexp: "^(UseDNS|#UseDNS)"
       line: "UseDNS {{ yes if security_ssh_usedns|bool == 'True' else 'no' }}"
     - regexp: "^PermitEmptyPasswords"
       line: "PermitEmptyPasswords {{ yes if security_ssh_permit_empty_password|bool == 'True' else 'no' }}"
@@ -24,8 +24,8 @@
       line: "GSSAPIAuthentication {{ yes if security_ssh_gss_api_authentication|bool == 'True' else 'no' }}"
     - regexp: "^X11Forwarding"
       line: "X11Forwarding {{ yes if security_ssh_x11_forwarding|bool == 'True' else 'no' }}"
-    - regexp: "^#PubkeyAuthentication"
-      line: "PubkeyAuthentication {{ yes if security_ssh_pubkey_auth|bool == 'True' else 'no' }}"
+    # - regexp: "^PubkeyAuthentication"
+    #   line: "PubkeyAuthentication {{ yes if security_ssh_pubkey_auth|bool == 'True' else 'no' }}"
     - regexp: "^#AuthorizedKeysFile"
       line: "AuthorizedKeysFile	.ssh/authorized_keys"
   notify: restart ssh
