docs, ansible cfg changes

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,3 +10,6 @@ library = ./ansible/library
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
+
+[connection]
+pipelining = True
