--- a/ansible/tasks/initsetup/arch.yaml
+++ b/ansible/tasks/initsetup/arch.yaml
@@ -97,30 +97,30 @@
 #     state: started
 #     name: org.cups.cupsd
 
-- name: Check if .zshrc exists
-  stat:
-    path: ~/.zshrc
-  register: stat_rc_result
+# - name: Check if .zshrc exists
+#   stat:
+#     path: ~/.zshrc
+#   register: stat_rc_result
 
-- name: Check if .oh-my-zsh exists
-  stat:
-    path: ~/.oh-my-zsh
-  register: stat_oh_my_zsh_result
+# - name: Check if .oh-my-zsh exists
+#   stat:
+#     path: ~/.oh-my-zsh
+#   register: stat_oh_my_zsh_result
 
-- name: Cloning oh-my-zsh
-  git:
-    repo: https://github.com/robbyrussell/oh-my-zsh
-    dest: ~/.oh-my-zsh
-    depth: 1
-  when: not stat_oh_my_zsh_result.stat.exists
+# - name: Cloning oh-my-zsh
+#   git:
+#     repo: https://github.com/robbyrussell/oh-my-zsh
+#     dest: ~/.oh-my-zsh
+#     depth: 1
+#   when: not stat_oh_my_zsh_result.stat.exists
 
-- name: Creating new ~/.zshrc
-  copy:
-    src: ~/.oh-my-zsh/templates/zshrc.zsh-template
-    dest: ~/.zshrc
-  when: not stat_rc_result.stat.exists
+# - name: Creating new ~/.zshrc
+#   copy:
+#     src: ~/.oh-my-zsh/templates/zshrc.zsh-template
+#     dest: ~/.zshrc
+#   when: not stat_rc_result.stat.exists
 
-- name: Set login shell of user {{ ansible_user_id }} to `/bin/zsh` with `usermod`
-  ansible.builtin.command: usermod --shell /bin/zsh {{ ansible_user_id }}
-  become: true
-  changed_when: false
+# - name: Set login shell of user {{ ansible_user_id }} to `/bin/zsh` with `usermod`
+#   ansible.builtin.command: usermod --shell /bin/zsh {{ ansible_user_id }}
+#   become: true
+#   changed_when: false
