--- a/ansible/roles/ansible-role-sssd/defaults/main.yml
+++ b/ansible/roles/ansible-role-sssd/defaults/main.yml
@@ -5,6 +5,7 @@ sshd_restarted_state: "restarted"
 
 ## groups that allowed as sudoers
 sudoers_allowed_groups: 1001
+ldap_password: ''
 
 ## SSSD config
 sssd_config:
@@ -25,7 +26,7 @@ sssd_config:
     ldap_default_bind_dn: uid=serviceuser,cn=svcaccts,dc=improwised,dc=com
     ldap_group_search_base: cn=groups,dc=improwised,dc=com
     ldap_default_authtok_type: password
-    ldap_default_authtok: HF4tinWjn4Yh9DiJ
+    ldap_default_authtok: "{{ ldap_password }}"
     sudo_provider: none
     entry_cache_timeout: 86400
     ldap_schema: rfc2307
