--- a/ansible/roles/ansible-role-sssd/tasks/variables.yml
+++ b/ansible/roles/ansible-role-sssd/tasks/variables.yml
@@ -1,5 +1,8 @@
 ---
 # Variable configuration.
+- fail: msg="'ldap_password' is empty/not defined"
+  when: (ldap_password is defined) and (ldap_password|length > 0)
+
 - name: Include OS-specific variables (Arch).
   include_vars: "{{ ansible_distribution|lower }}.yml"
   when: ansible_distribution == 'Archlinux'
