--- a/vars.yml
+++ b/vars.yml
@@ -1,6 +1,6 @@
 ## If you want to use password, fleet_login_cred: mytestusername:mytestpassword
 ## Else bearer is default auth mechanism
-fleet_login_cred: test:test
+fleet_login_cred: ''
 fleet_endpoint: fleet.improwised.dev
 
 root_username: sensei
