--- a/ansible/roles/ansible-osquery/tasks/main.yml
+++ b/ansible/roles/ansible-osquery/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for ansible-osquery
 - fail: msg="'fleet_login_cred' is empty/not defined"
-  when: (fleet_login_cred is defined) and (fleet_login_cred|length > 0)
+  when: (fleet_login_cred is defined) and (fleet_login_cred|length == 0)
 
 - name: Install osqueryd package
   include_tasks: "{{ ansible_os_family }}.yml"
